// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flexBasis Should parse (flex-basis-1) correctly 1`] = `
Object {
  "flexBasis": 4,
}
`;

exports[`flexBasis Should parse (flex-basis-2) correctly 1`] = `
Object {
  "flexBasis": 8,
}
`;

exports[`flexBasis Should parse (flex-basis-3) correctly 1`] = `
Object {
  "flexBasis": 12,
}
`;

exports[`flexBasis Should parse (flex-basis-4) correctly 1`] = `
Object {
  "flexBasis": 16,
}
`;

exports[`flexBasis Should parse (flex-basis-5) correctly 1`] = `
Object {
  "flexBasis": 20,
}
`;

exports[`flexBasis Should parse (flex-basis-6) correctly 1`] = `
Object {
  "flexBasis": 24,
}
`;

exports[`flexBasis Should parse (flex-basis-8) correctly 1`] = `
Object {
  "flexBasis": 32,
}
`;
